changed ark field label, prep for pagescripts.

--- a/templates/collection_record/collection_record/add.html
+++ b/templates/collection_record/collection_record/add.html
@@ -7,3 +7,9 @@
 {%block supplemental_files%}{%endblock supplemental_files%}
 {%block uploader%}{%endblock uploader%}
 {%block uploader_footer%}{%endblock uploader_footer%}
+{%block pagescripts %}
+<script type="text/javascript">
+    //hide the ark input and "replace with a button"
+    //when button pressed, show field
+</script>
+{%endblock pagescripts %}
