--- a/templates/collection_record/collection_record/edit.html
+++ b/templates/collection_record/collection_record/edit.html
@@ -493,4 +493,5 @@ $(function() {
 });
 </script>
 {%endblock uploader_footer%}
+{%block pagescripts %}{%endblock pagescripts %}
 {%endblock bodycontent%}
