Flow changes and test updates to match. No "Preview" anymore.

--- a/templates/collection_record/collection_record/add.html
+++ b/templates/collection_record/collection_record/add.html
@@ -2,8 +2,8 @@
 
 {%block uploader_head%}{%endblock uploader_head%}
 {%block bodytitle%}<h1>Add a Collection Record to the OAC</h1>{%endblock bodytitle%}
-{%block submit_top %}<input style="float:right" name="submit" type="submit" value="Preview record"/>{%endblock submit_top %}
-{%block submit_bottom%}<input style="float:right" name="submit" type="submit" value="Preview record"/>{%endblock submit_bottom%}
+{%block submit_top %}<input style="float:right" name="submit" type="submit" value="Create record"/>{%endblock submit_top %}
+{%block submit_bottom%}<input style="float:right" name="submit" type="submit" value="Create record"/>{%endblock submit_bottom%}
 {%block supplemental_files%}{%endblock supplemental_files%}
 {%block uploader%}{%endblock uploader%}
 {%block uploader_footer%}{%endblock uploader_footer%}
