--- a/templates/collection_record/collection_record/edit.html
+++ b/templates/collection_record/collection_record/edit.html
@@ -66,8 +66,7 @@
 {%endblock extrahead %}
 
 {%block bodycontent%}
-{% if collection_record %}<a class="button" href="{{collection_record.get_absolute_url|safe}}">View</a>
-    {% endif %}
+{%comment%}{% if collection_record %}<a class="button" href="{{collection_record.get_absolute_url|safe}}">View</a>{% endif %}{%endcomment%}
 <div class="container" id="bodycontainer">
     <div class="area span-24 pageheader">
         {%block bodytitle%}<h1>Edit Collection Record : {{ collection_record.ark }}</h1>{%endblock bodytitle%}
@@ -312,7 +311,7 @@
     </div>
 </div>
 <script type="text/javascript" src="/site_media/js/jquery-1.7.min.js"></script>
-<script type="text/javascript" src="/site_media/js/jquery-1.7.js"></script>
+{%comment%}<script type="text/javascript" src="/site_media/js/jquery-1.7.js"></script>{%endcomment%}
 <script type="text/javascript" src="/site_media/js/jquery.formset.js"></script>
 <script type="text/javascript">
     $(function() {
@@ -380,15 +379,20 @@ $(function() {
     });
     */
     config = {
-       runtimes : 'gears,html5,html4,',
+       //runtimes : 'silverlight,', //html4 & browserplus do not support X-CSRFToken header
+       runtimes : 'gears,html5,silverlight,flash,', //html4 & browserplus do not support X-CSRFToken header
        url : '{% url collection_record.views.add_supplemental_file ark=collection_record.ark %}',
        browse_button : 'pickfile',
        container : 'uploader',
-       max_file_size : '1mb',
+       max_file_size : '10mb',
        chunk_size: '1mb',
        unique_names : false,
        multipart: true,
-       headers : {'X-Requested-With' : 'XMLHttpRequest', 'X-CSRFToken' : '{{csrf_token}}'},
+       headers : {'X-Requested-With' : 'XMLHttpRequest',
+       'X-CSRFToken' : '{{csrf_token}}',
+       'Referer' : window.location.toString()},
+       flash_swf_url : '/site_media/js/plupload/plupload.flash.swf',
+       silverlight_xap_url : '/site_media/js/plupload/plupload.silverlight.xap'
    };
     var uploader = new plupload.Uploader(config);
    $("#uploader").uploader = uploader;
@@ -436,6 +440,7 @@ $(function() {
     });
 
     uploader.bind('Error', function(up, err) {
+            alert('ERROR during file upload');
         $('#filelist').append("<div>Error: " + err.code +
             ", Message: " + err.message +
             (err.file ? ", File: " + err.file.name : "") +
@@ -456,7 +461,7 @@ $(function() {
     uploader.bind('FileUploaded', function(up, file, data) {
 
             //cheesy but works...
-            location.reload();
+            //location.reload();
             /*
             //should update the formset for assoc files
             //look at total num forms and get the empty-form
