Added link to "add view" from list.

--- a/templates/collection_record/collection_record/list.html
+++ b/templates/collection_record/collection_record/list.html
@@ -11,6 +11,7 @@
           {%endfor%}
       </ul>
       </div>
+      <strong><a href="{% url collection_record.views.add_collection_record %}">Add a collection record.</a></strong>
   </div>
 {% endblock bodycontent %}
 
