refactored style into base.

--- a/templates/collection_record/base.html
+++ b/templates/collection_record/base.html
@@ -17,6 +17,58 @@
     <link rel="stylesheet" href="/site_media/css/djsite/blueprint_dsc.css" type="text/css" media="screen, projection">
     {%endblock blueprintcss%}
 
+<style type="text/css"> h4 { font-weight:bold;}</style>
+<style type="text/css">
+    .add-row {
+        padding-left:18px;
+        padding-top:10px;
+        display:block;
+        background:url(/site_media/images/formsets/add.png) no-repeat left center;
+    }
+    .delete-row {
+        /*float:right;
+        display:block;*/
+        vertical-align:middle;
+        margin-left:4px;
+        padding-left:18px;
+        background:url(/site_media/images/formsets/delete.png) no-repeat left center;
+    }
+</style>
+<style type="text/css">
+ textarea {
+    width: 560px;
+    height: 40px;
+    vertical-align: bottom;
+    }
+ .orangetext {
+      color: #C2492C;
+ }
+ .errorbox {
+    background-color:yellow;
+ }
+ .empty-form {
+        display:none;
+ }
+ input[type=text] {
+     width:260px;
+ }
+ .dynamic-fieldset-form textarea {
+        width:40em;
+        height:1.3em;
+ }
+ .button {
+    float:right;
+    background-color:#C2492C;
+    color:white;
+    border-radius:10px;
+    font-size:30px;
+    margin:5px;
+    text-decoration:none;
+    padding:7px;
+    vertical-align:baseline;
+    line-height:1.5;
+}
+</style>
 
     {%block extrahead%}{%endblock extrahead%}
 
