--- a/templates/collection_record/collection_record/view.html
+++ b/templates/collection_record/collection_record/view.html
@@ -1,6 +1,7 @@
 {% extends 'collection_record/base.html' %}
 {%block pagetitle%}Add a Collection Record{%endblock pagetitle%}
 {%block extrahead %}
+{%comment%}
 <style type="text/css"> h4 { font-weight:bold;}</style>
 <style type="text/css">
     .add-row {
@@ -28,7 +29,9 @@
       color: #C2492C;
   }
 </style>
+{%endcomment%}
 
+{%block extrahead%}
 <script type="text/javascript" src="/site_media/js/jquery-1.3.2.min.js"></script>
 <script type="text/javascript" src="/site_media/js/jquery.formset.js"></script>
 <script type="text/javascript" src="/media/js/core.js"></script>
