Add help links to collection record. Right now, all are hardcoded to the production www.cdlib.org

--- a/templates/collection_record/base.html
+++ b/templates/collection_record/base.html
@@ -43,6 +43,11 @@
  .orangetext {
       color: #C2492C;
  }
+ {%comment%}
+ a.orangetext:visited {
+      color: #B1381B;
+ }
+ {%endcomment%}
  .errorbox {
     background-color:yellow;
  }
