--- a/templates/collection_record/base.html
+++ b/templates/collection_record/base.html
@@ -73,13 +73,24 @@
     vertical-align:baseline;
     line-height:1.5;
 }
+ img.header_title {
+     display: block;
+     margin-left: auto;
+     margin-right: auto;
+}
 </style>
 
     {%block extrahead%}{%endblock extrahead%}
 
   </head>
   <body {%block bodyattrs%}{%endblock bodyattrs%}>
-
+      {%block header %}
+    <div class="container" id="headercontainer">
+      <div class="span-24">
+          {% block header_title%}<img class="header_title" src="/site_media/images/logos/recordxpress.jpg" alt="RecordXpress"/>{% endblock header_title%}
+      </div>
+      </div>
+      {%endblock header%}
       {%block bodycontent%}<h1>Welcome to the OAC Collection Record Generator</h1>{%endblock bodycontent%}
 
 {%block footer%}
