--- a/templates/collection_record/base.html
+++ b/templates/collection_record/base.html
@@ -75,8 +75,7 @@
 }
  img.header_title {
      display: block;
-     margin-left: auto;
-     margin-right: auto;
+     float:left;
 }
 </style>
 
@@ -87,7 +86,7 @@
       {%block header %}
     <div class="container" id="headercontainer">
       <div class="span-24">
-          {% block header_title%}<img class="header_title" src="/site_media/images/logos/recordxpress.jpg" alt="RecordXpress"/>{% endblock header_title%}
+          {% block header_title%}<img class="header_title" src="/site_media/images/logos/recordxpress-med.png" alt="RecordXPRESS"/>{% endblock header_title%}
       </div>
       </div>
       {%endblock header%}
