More RecordEXPRESS formatting changes

--- a/templates/collection_record/base.html
+++ b/templates/collection_record/base.html
@@ -86,7 +86,7 @@
       {%block header %}
     <div class="container" id="headercontainer">
       <div class="span-24">
-          {% block header_title%}<img class="header_title" src="/site_media/images/logos/recordxpress-med.png" alt="RecordXPRESS"/>{% endblock header_title%}
+          {% block header_title%}<img class="header_title" src="/site_media/images/logos/recordxpress-med.png" alt="RecordEXPRESS"/>{% endblock header_title%}
       </div>
       </div>
       {%endblock header%}
