--- a/templates/collection_record/base.html
+++ b/templates/collection_record/base.html
@@ -86,7 +86,7 @@
       {%block header %}
     <div class="container" id="headercontainer">
       <div class="span-24">
-          {% block header_title%}<img class="header_title" src="/site_media/images/logos/record_express_med.png" alt="RecordEXPRESS"/>{% endblock header_title%}
+          {% block header_title%}<a href="{% url collection_record_view_all %}"><img class="header_title" src="/site_media/images/logos/record_express_med.png" alt="RecordEXPRESS"/></a>{% endblock header_title%}
       </div>
       </div>
       {%endblock header%}
@@ -94,7 +94,19 @@
 
 {%block footer%}
 {%endblock footer%}
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-438369-5']);
+  _gaq.push(['_trackPageview']);
 
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+     var href = window.location.href;
+  })();
+
+</script>
 </body>
 </html>
 
