change for publishing institution, it can't be changed once set through the collection record tool.

--- a/templates/collection_record/collection_record/add.html
+++ b/templates/collection_record/collection_record/add.html
@@ -7,6 +7,7 @@
 {%block supplemental_files%}{%endblock supplemental_files%}
 {%block uploader%}{%endblock uploader%}
 {%block uploader_footer%}{%endblock uploader_footer%}
+{%block publisherinfo %}{%endblock publisherinfo %}
 {%block pagescripts %}
 <script type="text/javascript">
     //hide the ark input and "replace with a button"
