Added email contact for problem reporting (oacops@cdlib.org)

--- a/templates/collection_record/collection_record/edit.html
+++ b/templates/collection_record/collection_record/edit.html
@@ -263,6 +263,7 @@
     </div>
     </div>
     {%endblock upload_form %}
+    <div><h5>Problems? Contact: oacops@cdlib.org</h5></div>
 </div>
 <script type="text/javascript" src="/site_media/js/jquery-1.7.min.js"></script>
 <script type="text/javascript" src="/site_media/js/jquery.formset.js"></script>
