--- a/templates/collection_record/collection_record/list.html
+++ b/templates/collection_record/collection_record/list.html
@@ -2,21 +2,24 @@
 {% block pagetitle %}Collection Records{% endblock pagetitle %}
 
 {% block bodycontent %}
-<div class='container' id="collection_record">
+<div class="container" id="collection_record">
       <div class="area span-24">
-          <span class="span-20">
+        <div class="span-24">
+          <span class="span-16">
           <h2>Collection Records in system: {{object_list|length}}</h2>
-      </span>
-          <span class="span-3 last">{%include "collection_record/help_link.html"%}</span>
-          {%for obj in object_list %}
-          <span class="span-18"><a href="{{obj.get_absolute_url|safe}}">{{obj.title}}</a></span>
-          <span class="last span-1"><a href="{{obj.get_xml_url|safe}}">[xml]</a></span>
-          {%endfor%}
-      </div>
-      <div class="span-24">
-      <strong><a href="{% url collection_record.views.add_collection_record %}">Add a collection record.</a></strong>
-  </div>
-  </div>
+          </span>
+          <span class="span-5">
+          <strong><a style="vertical-align:bottom" class="right" href="{% url collection_record.views.add_collection_record %}"><img src="/site_media/css/blueprint-css/icons/add.png"/>Add a collection record.</a></strong>
+          </span>
+          <span class="span-3 last right">{%include "collection_record/help_link.html"%}
+          </span>
+        </div>
+        {%for obj in object_list %}
+        <span class="span-18"><a href="{{obj.get_absolute_url|safe}}">{{obj.title}}</a></span>
+        <span class="last span-1"><a href="{{obj.get_xml_url|safe}}">[xml]</a></span>
+        {%endfor%}
+    </div>
+</div>
 {% endblock bodycontent %}
 
 
