--- a/collection_record/templates/collection_record/collection_record/list.html
+++ b/collection_record/templates/collection_record/collection_record/list.html
@@ -9,7 +9,7 @@
           <h2>Collection Records in system: {{object_list|length}}</h2>
           </span>
           <span class="span-5">
-          <strong><a style="vertical-align:bottom" class="right" href="{% url collection_record.views.add_collection_record %}"><img src="/site_media/css/blueprint-css/icons/add.png"/>Add a collection record.</a></strong>
+          <strong><a style="vertical-align:bottom" class="right" href="{% url 'collection_record.views.add_collection_record' %}"><img src="/site_media/css/blueprint-css/icons/add.png"/>Add a collection record.</a></strong>
           </span>
           <span class="span-3 last right">{%include "collection_record/help_link.html"%}
           </span>
