Make logout just straight admin logout. Handle preview URLs.

--- a/collection_record/templates/collection_record/base.html
+++ b/collection_record/templates/collection_record/base.html
@@ -92,7 +92,7 @@
           <span class="span-10 last">
               <span style="float:right">
                   <strong>{{user.username}}</strong>
-                {% url "contrib_admin:logout" as logout_url %}
+                {% url "admin:logout" as logout_url %}
                 <a href="{{ logout_url }}">Log out</a>
                </span>
           </span>
