Added load url from future for new style url

--- a/collection_record/templates/collection_record/collection_record/list.html
+++ b/collection_record/templates/collection_record/collection_record/list.html
@@ -1,4 +1,5 @@
 {% extends "collection_record/base.html" %}
+{% load url from future %}
 {% block pagetitle %}Collection Records{% endblock pagetitle %}
 
 {% block bodycontent %}
